# accelio

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  Doxyfile.in  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  libxio.spec  make-deb.sh
benchmarks/usr/xio_perftest/: Makefile.am  get_clock.c  perf_read_bw_client.sh  perf_read_bw_server.sh  perf_read_lat_client.sh  perf_read_lat_server.sh  xio_msg.c  xio_msg.h  xio_perftest.c  xio_perftest.h  xio_perftest_client.c  xio_perftest_communication.c  xio_perftest_communication.h  xio_perftest_parameters.c  xio_perftest_parameters.h  xio_perftest_resources.h  xio_perftest_server.c
debian/: changelog  control  copyright  rules
examples/kernel/hello_world_mt/: Makefile.in  configure.ac  xio_mt_client.c  xio_mt_server.c
examples/raio/: Makefile.am  run_client.sh
examples/raio/kernel/nbdx/: Makefile.in  README.md  autogen.sh  configure.ac  nbdx.h  nbdx_configfs.c  nbdx_main.c  nbdx_mq.c  raio_kbuffer.h  raio_kutils.c  raio_kutils.h
examples/raio/kernel/nbdx/fio_nbdx/: raio_rd_bw.fio  raio_rd_lat.fio  raio_wr_bw.fio  raio_wr_lat.fio  run_f_io_rd_bw.sh  run_f_io_rd_lat.sh  run_f_io_wr_bw.sh
examples/raio/kernel/nbdx/nbdxadm/: connect.sh  disconnect.sh  nbdxadm
examples/raio/usr/client/: raio_client.c
examples/raio/usr/fio/: Makefile.am  libraio.c  raio_rd_bw.fio  raio_rd_lat.fio  raio_wr_bw.fio  raio_wr_lat.fio  run_f_io_rd_bw.sh  run_f_io_rd_lat.sh  run_f_io_wr_bw.sh  run_f_io_wr_lat.sh
examples/raio/usr/libraio/: libraio.h  raio_api.c  raio_command.h  raio_utils.c  raio_utils.h
examples/raio/usr/server/: bitset.c  bitset.h  raio_bs.c  raio_bs.h  raio_bs_aio.c  raio_handlers.c  raio_handlers.h  raio_server.c
examples/usr/fio/: Makefile.am  libraio.c  raio-read-bw.fio  raio-read-lat.fio  raio-write.fio  raio_rd_bw.fio  raio_rd_lat.fio  raio_wr_bw.fio  raio_wr_lat.fio  run_f_io_bw.sh  run_f_io_lat.sh  run_f_io_wr_lat.sh
examples/usr/hello_world/: Makefile.am  run_client.sh  run_server.sh  xio_client.c  xio_server.c
examples/usr/hello_world_daemon/: Makefile.am  run_clientd.sh  run_serverd.sh  xioclntd.c  xiosrvd.c
examples/usr/hello_world_libevent/: Makefile.am  run_client.sh  run_server.sh  xio_client.c  xio_server.c
examples/usr/hello_world_mt/: Makefile.am  run_client.sh  run_server.sh  xio_mt_client.c  xio_mt_server.c
examples/usr/raio/: Makefile.am  get_clock.c  get_clock.h  libraio.h  msg_pool.c  msg_pool.h  raio_api.c  raio_bs.c  raio_bs.h  raio_bs_aio.c  raio_bs_null.c  raio_buffer.h  raio_client.c  raio_command.h  raio_handlers.c  raio_handlers.h  raio_msg_pool.c  raio_server.c  raio_utils.c  raio_utils.h  run_client.sh  run_server.sh
examples/usr/raio/usr/libraio/: libraio.h  raio_msg_pool.c  raio_msg_pool.h
examples/usr/raio/usr/server/: raio_bs.c  raio_handlers.c  raio_server.c
include/: libxio.h  xio_base.h  xio_kernel.h  xio_predefs.h  xio_user.h
management/statistics/: statistics.py
regression/usr/reg_basic_mt/: Makefile.am  reg_basic_mt.c  reg_basic_mt_client.c  reg_basic_mt_server.c  run_reg_basic_mt.sh
src/common/: xio_common.h  xio_conn.c  xio_conn.h  xio_connection.c  xio_connection.h  xio_conns_store.c  xio_conns_store.h  xio_context.h  xio_error.c  (+34 more)
src/kernel/compat/: Makefile.in  configure.ac
src/kernel/xio/: Makefile.in  configure.ac  xio_context.c  xio_context_priv.h  xio_ev_data.h  xio_ev_loop.c  xio_ev_loop.h  xio_init.c  xio_kernel_utils.c  xio_mem.c  xio_mem.h  xio_mempool.c  xio_mempool.h  xio_os.h  xio_schedwork.c  xio_sg_iov.c  xio_sg_iovptr.c  xio_sg_scatter.c  xio_sg_table.c  xio_task.c  xio_workqueue.c  xio_workqueue_priv.h
src/tools/usr/: Makefile.am  xio_if_numa_cpus.c  xio_mem_usage.c
src/usr/: Makefile.am  get_clock.c  get_clock.h  libxio.map  xio_context.c  xio_ev_loop.c  xio_init.c  xio_log.c  xio_log.h  xio_mem.c  xio_mem.h  xio_os.h  xio_rdma_datapath.c  xio_rdma_management.c  xio_rdma_mempool.c  xio_rdma_mempool.h  xio_rdma_transport.h  xio_rdma_utils.c  xio_rdma_utils.h  xio_rdma_verbs.c  xio_schedwork.c  xio_task.c  xio_timers_list.h  xio_tls.c  xio_tls.h  xio_usr_utils.c
src/usr/linux/: atomic.h  bitops.h  debugfs.h  hexdump.c  jiffies.h  kernel.h  kref.h  list.h  printk.h  slab.h  usr.h
src/usr/rdma/: xio_rdma_datapath.c  xio_rdma_management.c  xio_rdma_mempool.c  xio_rdma_mempool.h  xio_rdma_transport.h  xio_rdma_utils.c  xio_rdma_utils.h  xio_rdma_verbs.c
src/usr/transport/: xio_mempool.c  xio_mempool.h  xio_transport_mempool.c  xio_transport_mempool.h  xio_usr_transport.c  xio_usr_transport.h
src/usr/transport/rdma/: ib_cm.h  xio_rdma_datapath.c  xio_rdma_management.c  xio_rdma_transport.h  xio_rdma_utils.c  xio_rdma_utils.h  xio_rdma_verbs.c
src/usr/transport/tcp/: xio_tcp_datapath.c  xio_tcp_management.c  xio_tcp_transport.h
src/usr/xio/: get_clock.c  get_clock.h  xio_context.c  xio_context_priv.h  xio_ev_data.h  xio_ev_loop.c  xio_ev_loop.h  xio_init.c  xio_init.h  xio_log.c  xio_log.h  xio_mem.c  xio_mem.h  xio_netlink.c  xio_os.h  xio_schedwork.c  xio_schedwork_priv.h  xio_sg_iov.c  xio_sg_iovptr.c  xio_sg_table.c  xio_task.c  xio_timers_list.h  xio_tls.c  xio_tls.h  xio_usr_utils.c  xio_usr_utils.h  xio_workqueue.c  xio_workqueue_priv.h
tests/usr/common/: Makefile.am  xio_intf.c  xio_intf.h  xio_msg.c  xio_msg.h  xio_test_utils.c  xio_test_utils.h  xio_thread.c  xio_thread.h
tests/usr/direct_rdma_test/: Makefile.am  run_rdma_client.sh  run_rdma_server.sh  xio_rdma_client.c  xio_rdma_common_usr.c  xio_rdma_server.c
tests/usr/event_loop_tests/: Makefile.am  event_loop_tests.c
tests/usr/hello_test_bidi/: Makefile.am  run_client.sh  run_server.sh  xio_bidi_client.c  xio_bidi_server.c  xio_msg.c  xio_msg.h
tests/usr/hello_test_lat/: Makefile.am  run_client.sh  run_server.sh  xio_lat_client.c  xio_lat_server.c  xio_msg.c
tests/usr/hello_test_mt/: Makefile.am  run_mt_client.sh  run_mt_server.sh  xio_msg.c  xio_msg.h  xio_mt_client.c  xio_mt_server.c
tests/usr/hello_test_oneway/: Makefile.am  run_client.sh  run_server.sh  xio_msg.c  xio_msg.h  xio_oneway_client.c  xio_oneway_server.c
win/: accelio.sln
(+123 files in other folders)
